--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,63 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    background: #161415;
+    font-family: "Manrope", sans-serif;
+}
+
+.container{
+    max-width: 1248px;
+    margin: 0 auto;
+
+    
+}
+
+.wrapper{
+    overflow-x: hidden;
+}
+
+.section__title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 49px;
+    padding-bottom: 41px;
+    border-top: 1px solid #FFF;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.20);
+    margin-bottom: 80px;
+}
+
+.section__title .title,
+.section__title h2.title{
+    color: #FFF;
+    font-size: 56px;
+    font-weight: 500;
+    margin: 0;
+}
+
+.section__title .number{
+    color: rgba(255, 255, 255, 0.50);
+    text-align: right;
+    font-family: 'Inter';
+    font-size: 56px;
+    font-weight: 400;
+}
+
+.red__span{
+    color: #FFF;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 32px;
+}
+
+a{
+    text-decoration: none;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
